--- a/manifest.json
+++ b/manifest.json
@@ -11,13 +11,13 @@
       "src": "https://www.gstatic.com/android/keyboard/emojikit/v20210831/1F553/1F553.svg",
       "sizes": "192x192",
       "type": "image/svg+xml",
-      "purpose": "any maskable"
+      "purpose": "any"
     },
     {
       "src": "https://www.gstatic.com/android/keyboard/emojikit/v20210831/1F553/1F553.svg",
       "sizes": "512x512",
       "type": "image/svg+xml",
-      "purpose": "any maskable"
+      "purpose": "any"
     }
   ]
 }
