--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,21 @@
 {
-  "name": "Full Clock Tool",
-  "short_name": "ClockTool",
-  "description": "様々な機能を備えた多機能な時計ツール",
-  "start_url": "./",
-  "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#0078d7"
+  "name": "Timer",
+  "short_name": "Timer",
+  "description": "シンプルなタイマーアプリケーション",
+  "start_url": "/timer.html",
+  "display": "minimal-ui",
+  "background_color": "#000000",
+  "theme_color": "#4CAF50",
+  "icons": [
+    {
+      "src": "/icons/icon-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/icons/icon-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ]
 }
