--- a/manifest.json
+++ b/manifest.json
@@ -2,20 +2,8 @@
   "name": "Timer",
   "short_name": "Timer",
   "description": "シンプルなタイマーアプリケーション",
-  "start_url": "/timer.html",
+  "start_url": "/index.html",
   "display": "minimal-ui",
   "background_color": "#000000",
-  "theme_color": "#4CAF50",
-  "icons": [
-    {
-      "src": "/icons/icon-192x192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "/icons/icon-512x512.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
-  ]
+  "theme_color": "#4CAF50"
 }
