--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,23 @@
 {
   "name": "Timer",
   "short_name": "Timer",
-  "start_url": "/Timer/index.html",
+  "description": "Simple Timer (PWA)",
+  "start_url": "/Timer/?pwa=1",
+  "scope": "/Timer/",
   "display": "minimal-ui",
   "background_color": "#ffffff",
-  "theme_color": "#007bff"
+  "theme_color": "#ffffff",
+  "orientation": "portrait",
+  "icons": [
+    {
+      "src": "/Timer/icons/icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/Timer/icons/icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ]
 }
