--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "description": "Simple Timer (PWA)",
   "start_url": "/Timer/?pwa=1",
   "scope": "/Timer/",
-  "display": "minimal-ui",
+  "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#ffffff",
   "orientation": "portrait",
